Fixed spacing

--- a/style.scss
+++ b/style.scss
@@ -241,6 +241,10 @@ nav {
             display: flex;
             flex-direction: column;
             justify-content: center;
+
+            >:last-child {
+                margin-bottom: 0;
+            }
         }
 
         >.image {
